[package]
name = "offshape"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
base64 = "0.21"
bytes = "1.5.0"
camino = { version = "1.1.6", features = ["serde1"] }
clap = { version = "4.3.19", features = ["derive"] }
convert_case = "0.6.0"
dotenv = "0.15"
governor = "0.6.0"
hmac = "0.12"
http = "0.2"
httpdate = "1.0"
indoc = "2.0.4"
itertools = "0.11.0"
lazy_static = "1.4.0"
mime = "0.3"
nonzero_ext = "0.3.0"
percent-encoding = "2.3.0"
rand = "0.8"
regex = "1.9.1"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.7.6"
url = { version = "*", features = ["serde"] }
